--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,10 +1,7 @@
-outputChangeLogFile= src/main/resources/db/db.changelog-master.xml
-driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/liquibasedemo
-username=root
-password=bcmc1234
-
-
+driver=org.postgresql.Driver
+url=jdbc:postgresql://localhost:5432/test
+username=test
+password=test
 # Reference Properties
-referenceUrl=hibernate:spring:com.liquibasedemo.model?dialect=org.hibernate.dialect.MySQLDialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+referenceUrl=hibernate:spring:com.liquibasedemo.model?dialect=org.hibernate.dialect.PostgreSQL9Dialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 
